--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "file-type": "^19.0.0",
     "form-data": "^4.0.3",
     "multer": "^2.0.1",
     "mysql2": "^3.14.1",
     "path": "^0.12.7",
     "sequelize": "^6.37.7",
+    "sharp": "^0.33.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
