Update env.example configuration file

--- a/config/env.example
+++ b/config/env.example
@@ -6,7 +6,7 @@ AWS_S3_BUCKET=your-bucket-name
 
 # Database Configuration
 DB_HOST=localhost
-DB_USER=root
+DB_USERNAME=root
 DB_PASSWORD=your_password
 DB_NAME=user_management
 
